# paso

./: .clang-format  .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  README.md  index.html  params.json
admin/: CMakeLists.txt  abstractform.cpp  abstractform.h  abstractquerymodel.cpp  abstractquerymodel.h  activityeditorwidget.cpp  activityeditorwidget.h  activityform.cpp  activityform.h  activityform.ui  activityoverlapsdialog.cpp  activityoverlapsdialog.h  activityoverlapsdialog.ui  activityquerymodel.cpp  activityquerymodel.h  activitytablemodel.cpp  activitytablemodel.h  activityvalidator.cpp  activityvalidator.h  activitywizard.cpp  activitywizard.h  activitywizardfixeddatepage.cpp  activitywizardfixeddatepage.h  activitywizardfixeddatepage.ui  activitywizardlistsselectionpage.cpp  activitywizardlistsselectionpage.h  activitywizardlistsselectionpage.ui  activitywizardnameandtypepage.cpp  activitywizardnameandtypepage.h  activitywizardnameandtypepage.ui  activitywizardrepetitivedatespage.cpp  activitywizardrepetitivedatespage.h  activitywizardrepetitivedatespage.ui  activitywizardroomsselectionpage.cpp  activitywizardroomsselectionpage.h  activitywizardroomsselectionpage.ui  administratorform.cpp  administratorform.h  administratorform.ui  coursedetailsdialog.cpp  (+92 more)
cmake/: Utils.cmake
common/: CMakeLists.txt  activity.cpp  activity.h  addremoveentitiesform.cpp  addremoveentitiesform.h  addremoveentitiesform.ui  commaccess.cpp  commaccess.h  commdata.cpp  commdata.h  commmanager.cpp  commmanager.h  commping.cpp  commping.h  commregister.cpp  commregister.h  course.cpp  course.h  data.cpp  data.h  entity.cpp  entity.h  entitytablemodel.cpp  entitytablemodel.h  entityvalidator.cpp  entityvalidator.h  jsonserializable.cpp  jsonserializable.h  list.cpp  list.h  pasodb.cpp  pasodb.h  person.cpp  person.h  refreshablesqlquerymodel.cpp  refreshablesqlquerymodel.h  room.cpp  room.h  sslserver.cpp  sslserver.h  (+8 more)
conf/: 30-pasoserver.conf  pasoserver  pasoserver.conf
doc/: Doxyfile.in
server/: CMakeLists.txt  main.cpp  pasoserver.cpp  pasoserver.h  sslserver.cpp  sslserver.h
simulator/: CMakeLists.txt  certs.qrc  main.cpp  simulatormainwindow.cpp  simulatormainwindow.h  simulatormainwindow.ui
sql/: create_db.sql  create_objects.sql  drop_db.sql  drop_objects.sql  tables.sql
tests/: CMakeLists.txt  main.cpp  setup_test.sh  test_inside_docker.sh  test_inside_docker_centos.sh  testbase.cpp  testbase.h
tests/admin/: CMakeLists.txt  testactivityadministration.cpp  testactivityadministration.h  testcourseadministration.cpp  testcourseadministration.h  testcoursedetailsdialog.cpp  testcoursedetailsdialog.h  testlistadministration.cpp  testlistadministration.h  testlistdetailsdialog.cpp  testlistdetailsdialog.h  testlogindialog.cpp  testlogindialog.h  testmainwindow.cpp  testmainwindow.h  testroomadministration.cpp  testroomadministration.h  teststudentadministration.cpp  teststudentadministration.h  teststudentdetailsdialog.cpp  teststudentdetailsdialog.h  testsystemuseradministration.cpp  testsystemuseradministration.h  testteacheradministration.cpp  testteacheradministration.h
tests/admin/mocks/: mockactivitywizardpage.cpp  mockactivitywizardpage.h
tests/common/: CMakeLists.txt  main.cpp  testcommdata.cpp  testcommdata.h  testcommmanager.cpp  testcommmanager.h  testdata.cpp  testdata.h  testmodels.cpp  testmodels.h  testpasodb.cpp  testpasodb.h  testwidgets.cpp
tests/common/sql/: in_memory.sql
tests/files/: courses-double.csv  courses.csv  courses_with_errors.csv  ispiti.csv  list_members.csv  members_with_errors.csv  slusaju1.csv  slusaju2.csv  slusaju3.csv  slusaju4.csv  slusaju5.csv  slusaju6.csv  slusaju7.csv  slusaju8.csv  slusaju9.csv  studenti.csv  students.csv  students_with_errors.csv
tests/sql/: create_db.sql  create_objects.sql  drop_db.sql  drop_objects.sql  in_memory.sql
tests/ui/: CMakeLists.txt  main.cpp  testforms.cpp  testforms.h  testwidgets.cpp  testwidgets.h
tests/ui/mocks/: mockalwaysinvalidrecordvalidator.cpp  mockalwaysinvalidrecordvalidator.h  mockalwaysvalidrecordvalidator.cpp  mockalwaysvalidrecordvalidator.h  mockqueryform.cpp  mockqueryform.h  mockrecordeditorwidget.cpp  mockrecordeditorwidget.h  mocktableform.cpp  mocktableform.h
thesis/: diplomski.tex  etf.cls  etfcyr.cls  naslovna.tex  required-texlive-package.txt
translations/: paso_en_US.ts  paso_sr_RS.ts  translations.qrc
ui/: CMakeLists.txt  abstractform.cpp  abstractform.h  addremoveentitiesform.cpp  addremoveentitiesform.h  itemspicker.cpp  itemspicker.h  pdateedit.cpp  pdateedit.h  queryform.cpp  queryform.h  recordeditorwidget.cpp  recordeditorwidget.h  recordvalidator.cpp  recordvalidator.h  tableform.cpp  tableform.h
utils/coursestudentsgenerator/: CMakeLists.txt  main.cpp
utils/studentgenerator/: CMakeLists.txt  main.cpp
