cmake_minimum_required(VERSION 3.4 FATAL_ERROR)
project(testui)

# PaSo common library tests include dirs and libraries
include_directories(${CMAKE_SOURCE_DIR}/common)
include_directories(${CMAKE_SOURCE_DIR}/ui)
include_directories(${CMAKE_SOURCE_DIR}/admin)
link_libraries(Qt5::Core)
link_libraries(Qt5::Network)
link_libraries(Qt5::Sql)
link_libraries(Qt5::Test)
link_libraries(Qt5::Widgets)

add_executable(testlistadministration testlistadministration.cpp)
add_dependencies(testlistadministration pasoadminlib)
add_dependencies(testlistadministration pasoui)
add_dependencies(testlistadministration pasocommon)
target_link_libraries(testlistadministration pasoadminlib)
target_link_libraries(testlistadministration pasoui)
target_link_libraries(testlistadministration pasocommon)
add_test(NAME "list_administration_tests" COMMAND testlistadministration)
enable_coverage(testlistadministration pasoadminlib pasoui pasocommon)

add_executable(testcourseadministration testcourseadministration.cpp)
add_dependencies(testcourseadministration pasoadminlib)
add_dependencies(testcourseadministration pasoui)
add_dependencies(testcourseadministration pasocommon)
target_link_libraries(testcourseadministration pasoadminlib)
target_link_libraries(testcourseadministration pasoui)
target_link_libraries(testcourseadministration pasocommon)
add_test(NAME "course_administration_tests" COMMAND testcourseadministration)
enable_coverage(testcourseadministration pasoadminlib pasoui pasocommon)

